changed API call decrementing to every API call rather than AI only

--- a/UserLogin/lang/en/messages.json
+++ b/UserLogin/lang/en/messages.json
@@ -46,7 +46,8 @@
     "noActiveQuestion": "No active question found",
     "sessionJoined": "Successfully joined session",
     "questionRetrieved": "Question retrieved successfully",
-    "answerReceived": "Answer received successfully"
+    "answerReceived": "Answer received successfully",
+    "usageStatsRetrieved": "API usage retireve successfully"
   },
   "errors": {
     "invalidCredentials": "Invalid email or password",
